--- a/board/allwinner/h700/linux-sunxi64-current.config
+++ b/board/allwinner/h700/linux-sunxi64-current.config
@@ -4487,9 +4487,9 @@ CONFIG_DRM_SIMPLE_BRIDGE=y
 # CONFIG_DRM_CDNS_DSI is not set
 # CONFIG_DRM_CDNS_MHDP8546 is not set
 CONFIG_DRM_DW_HDMI=y
-# CONFIG_DRM_DW_HDMI_AHB_AUDIO is not set
-# CONFIG_DRM_DW_HDMI_I2S_AUDIO is not set
-# CONFIG_DRM_DW_HDMI_GP_AUDIO is not set
+CONFIG_DRM_DW_HDMI_AHB_AUDIO=y
+CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
+CONFIG_DRM_DW_HDMI_GP_AUDIO=y
 # CONFIG_DRM_DW_HDMI_CEC is not set
 # end of Display Interface Bridges
 
@@ -4608,6 +4608,8 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
 CONFIG_SND_PCM=y
+CONFIG_SND_PCM_ELD=y
+CONFIG_SND_PCM_IEC958=y
 CONFIG_SND_DMAENGINE_PCM=y
 CONFIG_SND_HWDEP=y
 CONFIG_SND_SEQ_DEVICE=y
@@ -4745,6 +4747,18 @@ CONFIG_SND_SUN4I_SPDIF=y
 # CONFIG_SND_SUN50I_DMIC is not set
 # end of Allwinner SoC Audio support
 
+CONFIG_SND_SOC_SUNXI_MACH=y
+CONFIG_SND_SOC_SUNXI_AHUB_DAM=y
+CONFIG_SND_SOC_SUNXI_INTERNALCODEC=y
+CONFIG_SND_SOC_SUNXI_SUN50IW9_CODEC=y
+
+#
+# Allwinner SoC Audio support V2
+#
+CONFIG_SND_SOC_SUNXI_AAUDIO=y
+CONFIG_SND_SOC_SUNXI_AHUB=y
+# end of Allwinner SoC Audio support V2
+
 # CONFIG_SND_SOC_XILINX_I2S is not set
 # CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER is not set
 # CONFIG_SND_SOC_XILINX_SPDIF is not set
@@ -4826,6 +4840,7 @@ CONFIG_SND_SOC_CS4341=m
 # CONFIG_SND_SOC_CX2072X is not set
 CONFIG_SND_SOC_DA7213=m
 CONFIG_SND_SOC_DMIC=m
+CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_ES7134 is not set
 CONFIG_SND_SOC_ES7241=m
 # CONFIG_SND_SOC_ES8311 is not set
